<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewTask">

    <EditText
        android:id="@+id/task_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/secondary_text"
        android:hint="@string/wprowadz_zadanie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/set_due_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:drawableRight="@drawable/ic_baseline_calendar_today_24"
        android:drawablePadding="8dp"
        android:text="@string/data"
        android:textColor="@color/secondary_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_edit_text" />


    <!--    <FrameLayout-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="10dp"-->
    <!--        android:animateLayoutChanges="true"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/task_edit_text">-->

    <!--        <com.google.android.material.button.MaterialButton-->
    <!--            android:id="@+id/save"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="Save"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textSize="@dimen/_13ssp"-->
    <!--            android:textStyle="bold"/>-->

    <!--        <ProgressBar-->
    <!--            android:id="@+id/progressBar"-->
    <!--            android:layout_width="@dimen/_25sdp"-->
    <!--            android:layout_height="@dimen/_25sdp"-->
    <!--            android:layout_gravity="center"-->
    <!--            android:visibility="invisible"/>-->
    <!--    </FrameLayout>-->
    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:text="@string/zapisz"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_edit_text" />


</androidx.constraintlayout.widget.ConstraintLayout>